[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/CharacterPlate/CharacterPlate.gd" type="Script" id=1]
[ext_resource path="res://UI/Bar/Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/bestia_theme.tres" type="Theme" id=7]
[ext_resource path="res://UI/CharacterPlate/HealthManaFont.tres" type="DynamicFont" id=8]

[node name="CharacterPlate" type="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 323.0
margin_bottom = 86.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCols" type="HBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 86.0

[node name="CharInfoMargin" type="MarginContainer" parent="MainCols"]
margin_right = 182.0
margin_bottom = 86.0
custom_constants/margin_right = 2

[node name="Rows" type="VBoxContainer" parent="MainCols/CharInfoMargin"]
margin_right = 180.0
margin_bottom = 86.0

[node name="CharacterInfo" type="Label" parent="MainCols/CharInfoMargin/Rows"]
margin_right = 180.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 18 )
text = "CharacterName"

[node name="Main" type="HBoxContainer" parent="MainCols/CharInfoMargin/Rows"]
margin_top = 24.0
margin_right = 180.0
margin_bottom = 74.0

[node name="Bars" type="VBoxContainer" parent="MainCols/CharInfoMargin/Rows/Main"]
margin_right = 180.0
margin_bottom = 50.0

[node name="HpBar" parent="MainCols/CharInfoMargin/Rows/Main/Bars" instance=ExtResource( 3 )]
margin_right = 180.0
margin_bottom = 6.0
rect_min_size = Vector2( 180, 6 )

[node name="HealthLabel" type="Label" parent="MainCols/CharInfoMargin/Rows/Main/Bars"]
margin_top = 10.0
margin_right = 180.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP: 0 / 0"

[node name="ManaBar" parent="MainCols/CharInfoMargin/Rows/Main/Bars" instance=ExtResource( 3 )]
margin_top = 27.0
margin_right = 180.0
margin_bottom = 33.0
rect_min_size = Vector2( 180, 6 )
primary_color = Color( 0, 0.372549, 1, 1 )

[node name="ManaLabel" type="Label" parent="MainCols/CharInfoMargin/Rows/Main/Bars"]
margin_top = 37.0
margin_right = 180.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Mana: 0 / 0"

[node name="Buttons1" type="VBoxContainer" parent="MainCols"]
margin_left = 186.0
margin_right = 261.0
margin_bottom = 86.0

[node name="Inventory" type="Button" parent="MainCols/Buttons1"]
margin_right = 75.0
margin_bottom = 26.0
text = "Inventory"

[node name="Attacks" type="Button" parent="MainCols/Buttons1"]
margin_top = 30.0
margin_right = 75.0
margin_bottom = 56.0
text = "Attacks"

[node name="Status" type="Button" parent="MainCols/Buttons1"]
margin_top = 60.0
margin_right = 75.0
margin_bottom = 86.0
text = "Status"

[node name="Buttons2" type="VBoxContainer" parent="MainCols"]
margin_left = 265.0
margin_right = 316.0
margin_bottom = 86.0

[node name="Equip" type="Button" parent="MainCols/Buttons2"]
margin_right = 51.0
margin_bottom = 26.0
text = "Equip"
[connection signal="pressed" from="MainCols/Buttons1/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="MainCols/Buttons1/Attacks" to="." method="_on_Attacks_pressed"]
[connection signal="pressed" from="MainCols/Buttons1/Status" to="." method="_on_Status_pressed"]
[connection signal="pressed" from="MainCols/Buttons2/Equip" to="." method="_on_Equip_pressed"]
